tests/tooling/fixtures/native/execution/positive/message_send_nil_immutable_global_identifier_post_pure_call_elision.objc3
module MessageSendNilImmutableGlobalIdentifierPostPureCallElisionExecution;

let receiver = nil;

fn touch() -> i32 {
  return 0;
}

fn main() -> i32 {
  touch();
  return [receiver ping];
}
