tests/tooling/fixtures/native/execution/negative/pure_definition_impure_unannotated_extern_call.objc3
module PureDefinitionImpureUnannotatedExternCallExecution;

fn ext_impure() -> i32;

pure fn touch() -> i32 {
  return ext_impure();
}

fn main() -> i32 {
  return touch();
}
